--- a/HomeTaskBookCategory.csproj
+++ b/HomeTaskBookCategory.csproj
@@ -23,6 +23,10 @@
     <None Remove="AutoMapper.Extensions.Microsoft.DependencyInjection" />
     <None Remove="Mapping\" />
     <None Remove="Mapping\Profiles\" />
+    <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <None Remove="Microsoft.EntityFrameworkCore.Design" />
+    <None Remove="DTOs\Account\" />
+    <None Remove="Microsoft.AspNetCore.Authentication.JwtBearer" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -37,6 +41,7 @@
     <Folder Include="wwwroot\Images\" />
     <Folder Include="Mapping\" />
     <Folder Include="Mapping\Profiles\" />
+    <Folder Include="DTOs\Account\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.27" />
@@ -47,8 +52,14 @@
     </PackageReference>
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.1.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.3" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.27">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.27" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="wwwroot\" />
